@@ -21,15 +21,13 @@ $install->settings->erase();
 
 $langs = array();
 $path = dirname(dirname(__FILE__)).'/lang/';
-if ($handle = dir($path)) {
-	while (false !== ($file = $handle->read())) {
-		if (!in_array($file, array('.', '..','.htaccess','.svn')) && is_dir($path.$file)) {
-			if (file_exists($path.$file.'/default.inc.php')) {
-				$langs[] = $file;
-			}
+foreach (new DirectoryIterator($path) as $file) {
+    $basename = $file->getFilename();
+	if (!in_array($basename, array('.', '..','.htaccess','.svn')) && $file->isDir()) {
+		if (file_exists($file->getPathname().'/default.inc.php')) {
+			$langs[] = $basename;
 		}
 	}
-	@closedir($handle);
 }
 sort($langs);
 $this->parser->assign('langs', $langs);
